[package]
name = "cathode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18" }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
tracing-subscriber = "0.3.17"
tracing = "0.1"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" , "mysql" ] }
tower = "0.4.13"
dotenv = "0.15.0"
serde_json = "1.0.96"
mime = "0.3.17"
